--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!--test-->
 <html>
   <head>
     <meta charset="utf-8">
@@ -12,8 +11,8 @@
   <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="https://bulma.io">
-          <img src="assets/Capture.png" alt="" width="112" height="28">
+        <a class="navbar-item" href="index.html">
+          Cumpleaños
         </a>
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="true">
           <span aria-hidden="false"></span>
@@ -22,10 +21,11 @@
         </a>
       </div>
     </nav>
-    <div id="wrapper">
+
+    
     <nav class="level">
-      <div class="column is-6">
       <div class="level-item has-text-centered">
+        <h3 class="label">Please enter the month and day you were born:</h3>
         <div class="select is-danger">
           <select id ="month">
             <option>Month</option>
@@ -43,9 +43,7 @@
             <option>12</option>
           </select>
         </div>
-      </div>
-      </div>
-      <div class="column is-6"> 
+
       <div class="level-item has-text-centered">
         <div class="select is-danger">
           <select id="day">
@@ -86,6 +84,7 @@
       </div>
     </nav>
     <div class="column is-12" id="star-sign-data">
+    </div>  
         <div class="row" id="star-sign"></div>
         <div class="row" id="description"></div>
         <br>
