--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="level">
       <div class="level-item has-text-centered">
         <h3 class="label">Please enter the month and day you were born:</h3>
-        <div class="select is-danger">
+        <div class="select is-success">
           <select id ="month">
             <option>Month</option>
             <option>01</option>
@@ -44,7 +44,7 @@
           </select>
         </div>
       <div class="level-item has-text-centered">
-        <div class="select is-danger">
+        <div class="select is-success">
           <select id="day">
             <option>Day</option>
             <option>01</option>
@@ -82,7 +82,7 @@
       </div>
       </div>
     </nav>
-    <div class="column is-12" id="star-sign-data">
+    <!-- <div class="column is-12" id="star-sign-data"> -->
     </div>  
         <div class="row" id="star-sign"></div>
         <div class="row" id="description"></div>
