--- a/index.html
+++ b/index.html
@@ -144,7 +144,10 @@
 <!-- --------------------------------------------------------------------- -->
 </body>
 <footer>
-  <div><i class="fas fa-smile-beam"></i> Fueled by Memes, Teams, & Dreams <i class="fas fa-smile-beam"></i></div>
+  <div>
+    <p><i class="fas fa-smile-beam"></i> Fueled by Memes, Teams, & Dreams <i class="fas fa-smile-beam"></i></p>  
+    <p>Copyright © 2020 Andrew Ross, Angie Yu, Liz Alexander and Crystal Nwansi. All Rights Reserved.</p> 
+  </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
