--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="index.html">
-          Cumpleaños
-        </a>
-        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="true">
-          <span aria-hidden="false"></span>
-          <span aria-hidden="false"></span>
-          <span aria-hidden="false"></span>
-        </a>
+        <a >
+          <img class="navbar-item " href="index.html" src="assets/cumpleanos.png" alt="Cumpleaños" width="50%" height="50%">          
+        </a> 
+        <a >
+          <img class="navbar-item2 " href="index.html" src="assets/title.png" alt="Cumpleaños" width="70%" height="75%">          
+        </a>     
       </div>
     </nav>
 
