--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="level">
       <div class="level-item has-text-centered">
         <h3 class="label">Please enter the month and day you were born:</h3>
-        <div class="select is-success">
+        <div class="select is-dark" style="background-color: gray;">
           <select id ="month">
             <option>Month</option>
             <option>01</option>
@@ -43,7 +43,7 @@
           </select>
         </div>
       <div class="level-item has-text-centered">
-        <div class="select is-success">
+        <div class="select is-dark">
           <select id="day">
             <option>Day</option>
             <option>01</option>
