--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a >
-          <img class="navbar-item " href="index.html" src="assets/cumpleanos.png" alt="Cumpleaños" width="50%" height="50%">          
+        <a href="index.html">
+          <img class="navbar-item " href="#" src="assets/cumpleanos.png" alt="Cumpleaños" width="50%" height="50%">          
         </a> 
-        <a >
-          <img class="navbar-item2 " href="index.html" src="assets/title.png" alt="Cumpleaños" width="70%" height="75%">          
+        <a href="index.html">
+          <img class="navbar-item2 "  src="assets/title.png" alt="Cumpleaños" width="70%" height="75%">          
         </a>     
       </div>
     </nav>
@@ -142,12 +142,27 @@
 
 <!-- --------------------------------------------------------------------- -->
 </body>
-<footer>
-  <div>
-    <p><i class="fas fa-smile-beam"></i> Fueled by Memes, Teams, & Dreams <i class="fas fa-smile-beam"></i></p>  
+
+
+<!-- <footer class="footer">
+  <div class="content has-text-centered">
+    <p>
+      . The source code is licensed
+      <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+      is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+    </p>
+  </div>
+</footer> -->
+
+<footer class="footer">
+  <div class="has-text-centered">
+    <p class="p1"><i class="fas fa-smile-beam"></i> Fueled by Memes, Teams, & Dreams <i class="fas fa-smile-beam"></i></p> 
+    <a href="https://bulma.io/">Created with <strong>Bulma</strong>  </a> 
     <p>Copyright © 2020 Andrew Ross, Angie Yu, Liz Alexander and Crystal Nwansi. All Rights Reserved.</p> 
   </div>
 </footer>
+
+
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="script.js"></script>
