--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 <footer class="footer">
   <div class="has-text-centered">
     <p class="p1"><i class="fas fa-smile-beam"></i> Fueled by Memes, Teams, & Dreams <i class="fas fa-smile-beam"></i></p> 
-    <a href="https://bulma.io/">Created with <strong>Bulma</strong>  </a> 
+    <a href="https://bulma.io/"><span>Created with </span><strong>Bulma</strong>  </a> 
     <p>Copyright © 2020 Andrew Ross, Angie Yu, Liz Alexander and Crystal Nwansi. All Rights Reserved.</p> 
   </div>
 </footer>
