--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
 
 <footer class="footer">
   <div class="has-text-centered">
-    <p class="p1"><i class="fas fa-smile-beam"></i> Fueled by Memes, Teams, & Dreams <i class="fas fa-smile-beam"></i></p> 
-    <a href="https://bulma.io/"><span>Created with </span><strong>Bulma</strong>  </a> 
+    <p class="p1"><i class="fas fa-smile-beam"></i><a href="https://bulma.io/"><span> Created with </span><strong>Bulma</strong>  </a> - Fueled by Memes, Teams, & Dreams <i class="fas fa-smile-beam"></i></p> 
     <p>Copyright © 2020 Andrew Ross, Angie Yu, Liz Alexander and Crystal Nwansi. All Rights Reserved.</p> 
   </div>
 </footer>
